# endor-labs-agent-kit

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTEXT.md  GEMINI.md  README.md  RELEASES.md  catalog.json  gemini-extension.json  llms.txt  manifest.json  model-recommendations.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json  reject-repository-root.sh  root-package-guard-hooks.json
.codex/: config.toml
.cursor-plugin/: marketplace.json  plugin.json
agents/: endor-agent-kit-setup-agent.md  endor-ai-sast-remediation-agent.md  endor-ai-sast-triage-agent.md  endor-cicd-posture-agent.md  endor-configuration-automation-agent.md  endor-dependency-decision-helper-agent.md  endor-dependency-reviewer-agent.md  endor-findings-browser-agent.md  endor-malware-responder-agent.md  endor-malware-response-agent.md  endor-oss-upgrade-investigator-agent.md  endor-package-risk-summary-agent.md  endor-probe-droid-agent.md  endor-remediation-planner-agent.md  endor-remediation-planning-agent.md  endor-repository-dependency-reviewer-agent.md  endor-sca-remediation-agent.md  endor-troubleshooter-agent.md  endor-troubleshooting-agent.md  endor-upgrade-impact-analysis-agent.md  endor-vulnerability-explainer-agent.md
cursor-sdk/: README.md  agent_definitions.json  run_cursor_agent.py
docs/: agent-identity-migration.md  agent-performance-followups.md  amp-mcp.md  backend-agent-telemetry-acceptance.md  codex-directory-submission.md  contributing-agents.md  distribution-sync.md  for-agents.md  getting-started.md  guardrails.md  maintainer-guide.md  model-recommendations.md  (+5 more)
(+1212 files in other folders)
