[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endor-labs-agent-kit"
version = "0.1.0"
description = "Portable Endor Labs workflow agents for AI coding hosts"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "Endor Labs" },
]
dependencies = [
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
endor-agent-kit = "endor_agent_kit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/endor_agent_kit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
